# claude-plugin-slack

./: .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  ONBOARDING.md  README.md  ai-rules-sync.json  pyproject.toml  ruff.toml
.claude/: settings.local.json
.claude-plugin/: plugin.json
.claude/agents/: bowser-qa-agent.md  claude-bowser-agent.md  e2e-test-agent.md  gha-monitor.md  playwright-bowser-agent.md  test-coverage-agent.md  test-runner.md
.claude/commands/: bowser  build.md  expand-cli-usecase-docs.md  implement-adr.md  kiro-pipeline.md  kiro-reviewer.md  list-tools.md  nano-banana.md  opsx  pencil-design.md  prime.md  release.md  speckit.analyze.md  speckit.checklist.md  speckit.clarify.md  speckit.constitution.md  speckit.implement.md  (+6 more)
commands/: channels.md  heartbeat.md  loop.md  react.md  read.md  reload.md  send.md  setup.md  status.md  stop.md  tidy.md  update.md  upload.md
deploy/: config.toml  slack-proxy.service
docs/: polling-guide.md
scripts/: slack  slack-cache-clear  slack-channels  slack-common  slack-config-strip  slack-cursor  slack-fetch  slack-filter  slack-heartbeat  slack-heartbeat.py  slack-identity  slack-mark  slack-mention-tracker  slack-mention-tracker.py  slack-poll  slack-poll-daemon  slack-poll-daemon.py  slack-poll-legacy  slack-poll.py  slack-react  slack-resolve  slack-scan-commitments  slack-send  slack-setup-verify  slack-shim  slack-thread  slack-tidy  slack_cli_options.py
tests/: conftest.py  test_cache.py  test_config.py  test_e2e.py  test_health.py  test_invalidation.py  test_routes.py  test_upstream.py
(+93 files in other folders)
