[project]
name = "scc-slack-proxy"
version = "0.1.0"
description = "Caching proxy for the Slack Web API"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "httpx>=0.28",
    "stoolap-python>=0.2",
]

[dependency-groups]
dev = [
    "pre-commit>=4",
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5",
    "respx>=0.22",
    "pytest-httpx>=0.35",
    "ruff>=0.14",
]

# Run with: pytest --cov=src/proxy --cov-fail-under=80
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/proxy"]
omit = ["src/proxy/service.py"]

[tool.coverage.report]
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if __name__",
    "def main",
]
